// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index/Payment/components/Modals/PinPad/components/PinpadModal component should render correctly when has show modal and has two payments by pinpad 1`] = `
<PinpadModal
  addError={[Function]}
  clearError={[Function]}
  communicatingWithDevice={[Function]}
  getAPDServerStatus={[Function]}
  pinpad={
    Object {
      "payment": Immutable.Map {
        receiptHeaderId: 1234,
        agentId: 0,
        isRefund: false,
        currentPayIndex: 0,
        promptMessage: "",
        isNewCard: false,
        cardHolderInfo: Immutable.Map {
            cardholderZip: null,
            cardholderAddr: null,
        },
        pays: Immutable.List [
            Immutable.Map {
                ams_account_id: "APD AccountID",
                payment_type_id: 4,
                hasError: true,
                index: 0,
                payName: "Debit Card",
                amount: "370.00",
                apd_input_type: 1,
                paymentTypeId: 4,
                errorMessage: "unknown error",
            },
            Array [
                Object {
                  "amount": "123.00",
                  "ams_account_id": "APD AccountID",
                  "apd_input_type": 1,
                  "index": 0,
                  "payName": "Credit Card",
                  "paymentTypeId": 3,
                  "payment_type_id": 3,
                },
              ],
        ],
        communicating: false,
        debitCardId: 4,
        companyId: 0,
        customerId: 1,
        apdAppletInfo: Immutable.Map {
            pinpad_data_entry_timeout: 20,
            avs_zip: false,
            avs_full_addr: true,
            write_to_log: "Yes",
            merchant_user: "AMS34VbVMSCRealDivId",
            device_id: 999888,
            merchant_descriptor: "ActiveNetTrainer",
            pinpad_pin_entry_timeout: 40,
            ams_timeout: 100,
            terminal_location_state: "CA",
            terminal_number: "007",
            terminal_location_address: "937 Enterprise Dr",
            usb_port_name: "COM5",
            card_acceptor_name: "YMCA OF METROPOLITAN LOS ANGELES",
            applet_name: "APDInterfaceApplet",
            terminal_location_city: "Sacramento",
            merchant_password: "AMS34VbVMSCRealDivId",
            ams_url: "mstest.active.com",
            device_type_id: 1,
            pinpad_swipe_card_timeout: 50,
            applets: "codebase=/device-libs/",
            pinpad_device_timeout: 300,
            ams_port: 443,
            terminal_location_zip: "95825",
        },
        errorMessage: "",
        apdPaymentInfo: Immutable.Map {
            receiptNumber: 1000778.005,
            hasImmediatePaymentDue: false,
            orderId: "Receipt ID 22916",
            receiptPaymentId: 20423,
            rno: 1,
            committedReceiptId: 22916,
            canCancelApdPayment: true,
            isPayerCashCustomer: false,
            orderDescriptor: "YMCA OF METROPOLITAN LOS ANGELES",
            key: 1,
        },
    },
      "pinpadFail": Immutable.Map {
        shown: false,
    },
      "pinpadModal": Immutable.Map {
        title: "Processing Transaction",
        shown: true,
        apdInterfaceApplet: Immutable.Map {
        },
    },
    }
  }
  processAPDResponse={[Function]}
  processRejectAction={[Function]}
  processResolveAction={[Function]}
  setApdInterfaceApplet={[Function]}
  showFailActionBtns={[Function]}
  showModal={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  updateCurrentPayIndex={[Function]}
  updateErrorMessage={[Function]}
  updateModalTitle={[Function]}
  updatePromptMessage={[Function]}
  updateSuccessMessage={[Function]}
>
  <Modal
    className="pinpad-modal"
    shown={true}
    title="Processing Transaction"
  >
    <div
      className="modal-body"
    >
      <MutiplePays
        pinpad={
          Object {
            "payment": Immutable.Map {
              receiptHeaderId: 1234,
              agentId: 0,
              isRefund: false,
              currentPayIndex: 0,
              promptMessage: "",
              isNewCard: false,
              cardHolderInfo: Immutable.Map {
                  cardholderZip: null,
                  cardholderAddr: null,
              },
              pays: Immutable.List [
                  Immutable.Map {
                      ams_account_id: "APD AccountID",
                      payment_type_id: 4,
                      hasError: true,
                      index: 0,
                      payName: "Debit Card",
                      amount: "370.00",
                      apd_input_type: 1,
                      paymentTypeId: 4,
                      errorMessage: "unknown error",
                  },
                  Array [
                      Object {
                        "amount": "123.00",
                        "ams_account_id": "APD AccountID",
                        "apd_input_type": 1,
                        "index": 0,
                        "payName": "Credit Card",
                        "paymentTypeId": 3,
                        "payment_type_id": 3,
                      },
                    ],
              ],
              communicating: false,
              debitCardId: 4,
              companyId: 0,
              customerId: 1,
              apdAppletInfo: Immutable.Map {
                  pinpad_data_entry_timeout: 20,
                  avs_zip: false,
                  avs_full_addr: true,
                  write_to_log: "Yes",
                  merchant_user: "AMS34VbVMSCRealDivId",
                  device_id: 999888,
                  merchant_descriptor: "ActiveNetTrainer",
                  pinpad_pin_entry_timeout: 40,
                  ams_timeout: 100,
                  terminal_location_state: "CA",
                  terminal_number: "007",
                  terminal_location_address: "937 Enterprise Dr",
                  usb_port_name: "COM5",
                  card_acceptor_name: "YMCA OF METROPOLITAN LOS ANGELES",
                  applet_name: "APDInterfaceApplet",
                  terminal_location_city: "Sacramento",
                  merchant_password: "AMS34VbVMSCRealDivId",
                  ams_url: "mstest.active.com",
                  device_type_id: 1,
                  pinpad_swipe_card_timeout: 50,
                  applets: "codebase=/device-libs/",
                  pinpad_device_timeout: 300,
                  ams_port: 443,
                  terminal_location_zip: "95825",
              },
              errorMessage: "",
              apdPaymentInfo: Immutable.Map {
                  receiptNumber: 1000778.005,
                  hasImmediatePaymentDue: false,
                  orderId: "Receipt ID 22916",
                  receiptPaymentId: 20423,
                  rno: 1,
                  committedReceiptId: 22916,
                  canCancelApdPayment: true,
                  isPayerCashCustomer: false,
                  orderDescriptor: "YMCA OF METROPOLITAN LOS ANGELES",
                  key: 1,
              },
          },
            "pinpadFail": Immutable.Map {
              shown: false,
          },
            "pinpadModal": Immutable.Map {
              title: "Processing Transaction",
              shown: true,
              apdInterfaceApplet: Immutable.Map {
              },
          },
          }
        }
      />
      <div
        id="pinpad-applet-container"
      />
    </div>
  </Modal>
</PinpadModal>
`;

exports[`index/Payment/components/Modals/PinPad/components/PinpadModal component should render correctly when has shown modal and has no payments 1`] = `
<PinpadModal
  addError={[Function]}
  clearError={[Function]}
  communicatingWithDevice={[Function]}
  getAPDServerStatus={[Function]}
  pinpad={
    Object {
      "payment": Immutable.Map {
        receiptHeaderId: 1234,
        agentId: 0,
        isRefund: false,
        currentPayIndex: 0,
        promptMessage: "",
        isNewCard: false,
        cardHolderInfo: Immutable.Map {
            cardholderZip: null,
            cardholderAddr: null,
        },
        pays: Immutable.List [
        ],
        communicating: false,
        debitCardId: 4,
        companyId: 0,
        customerId: 1,
        apdAppletInfo: Immutable.Map {
            pinpad_data_entry_timeout: 20,
            avs_zip: false,
            avs_full_addr: true,
            write_to_log: "Yes",
            merchant_user: "AMS34VbVMSCRealDivId",
            device_id: 999888,
            merchant_descriptor: "ActiveNetTrainer",
            pinpad_pin_entry_timeout: 40,
            ams_timeout: 100,
            terminal_location_state: "CA",
            terminal_number: "007",
            terminal_location_address: "937 Enterprise Dr",
            usb_port_name: "COM5",
            card_acceptor_name: "YMCA OF METROPOLITAN LOS ANGELES",
            applet_name: "APDInterfaceApplet",
            terminal_location_city: "Sacramento",
            merchant_password: "AMS34VbVMSCRealDivId",
            ams_url: "mstest.active.com",
            device_type_id: 1,
            pinpad_swipe_card_timeout: 50,
            applets: "codebase=/device-libs/",
            pinpad_device_timeout: 300,
            ams_port: 443,
            terminal_location_zip: "95825",
        },
        errorMessage: "",
        apdPaymentInfo: Immutable.Map {
            receiptNumber: 1000778.005,
            hasImmediatePaymentDue: false,
            orderId: "Receipt ID 22916",
            receiptPaymentId: 20423,
            rno: 1,
            committedReceiptId: 22916,
            canCancelApdPayment: true,
            isPayerCashCustomer: false,
            orderDescriptor: "YMCA OF METROPOLITAN LOS ANGELES",
            key: 1,
        },
    },
      "pinpadFail": Immutable.Map {
        shown: false,
    },
      "pinpadModal": Immutable.Map {
        title: "Processing Transaction",
        shown: true,
        apdInterfaceApplet: Immutable.Map {
        },
    },
    }
  }
  processAPDResponse={[Function]}
  processRejectAction={[Function]}
  processResolveAction={[Function]}
  setApdInterfaceApplet={[Function]}
  showFailActionBtns={[Function]}
  showModal={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  updateCurrentPayIndex={[Function]}
  updateErrorMessage={[Function]}
  updateModalTitle={[Function]}
  updatePromptMessage={[Function]}
  updateSuccessMessage={[Function]}
>
  <Modal
    className="pinpad-modal"
    shown={true}
    title="Processing Transaction"
  >
    <div
      className="modal-body"
    >
      <div
        id="pinpad-applet-container"
      />
    </div>
  </Modal>
</PinpadModal>
`;

exports[`index/Payment/components/Modals/PinPad/components/PinpadModal component should render correctly when has shown modal and only has one payment 1`] = `
<PinpadModal
  addError={[Function]}
  clearError={[Function]}
  communicatingWithDevice={[Function]}
  getAPDServerStatus={[Function]}
  pinpad={
    Object {
      "payment": Immutable.Map {
        receiptHeaderId: 1234,
        agentId: 0,
        isRefund: false,
        currentPayIndex: 0,
        promptMessage: "",
        isNewCard: false,
        cardHolderInfo: Immutable.Map {
            cardholderZip: null,
            cardholderAddr: null,
        },
        pays: Immutable.List [
            Immutable.Map {
                ams_account_id: "APD AccountID",
                payment_type_id: 4,
                hasError: true,
                index: 0,
                payName: "Debit Card",
                amount: "370.00",
                apd_input_type: 1,
                paymentTypeId: 4,
                errorMessage: "unknown error",
            },
        ],
        communicating: false,
        debitCardId: 4,
        companyId: 0,
        customerId: 1,
        apdAppletInfo: Immutable.Map {
            pinpad_data_entry_timeout: 20,
            avs_zip: false,
            avs_full_addr: true,
            write_to_log: "Yes",
            merchant_user: "AMS34VbVMSCRealDivId",
            device_id: 999888,
            merchant_descriptor: "ActiveNetTrainer",
            pinpad_pin_entry_timeout: 40,
            ams_timeout: 100,
            terminal_location_state: "CA",
            terminal_number: "007",
            terminal_location_address: "937 Enterprise Dr",
            usb_port_name: "COM5",
            card_acceptor_name: "YMCA OF METROPOLITAN LOS ANGELES",
            applet_name: "APDInterfaceApplet",
            terminal_location_city: "Sacramento",
            merchant_password: "AMS34VbVMSCRealDivId",
            ams_url: "mstest.active.com",
            device_type_id: 1,
            pinpad_swipe_card_timeout: 50,
            applets: "codebase=/device-libs/",
            pinpad_device_timeout: 300,
            ams_port: 443,
            terminal_location_zip: "95825",
        },
        errorMessage: "",
        apdPaymentInfo: Immutable.Map {
            receiptNumber: 1000778.005,
            hasImmediatePaymentDue: false,
            orderId: "Receipt ID 22916",
            receiptPaymentId: 20423,
            rno: 1,
            committedReceiptId: 22916,
            canCancelApdPayment: true,
            isPayerCashCustomer: false,
            orderDescriptor: "YMCA OF METROPOLITAN LOS ANGELES",
            key: 1,
        },
    },
      "pinpadFail": Immutable.Map {
        shown: false,
    },
      "pinpadModal": Immutable.Map {
        title: "Processing Transaction",
        shown: true,
        apdInterfaceApplet: Immutable.Map {
        },
    },
    }
  }
  processAPDResponse={[Function]}
  processRejectAction={[Function]}
  processResolveAction={[Function]}
  setApdInterfaceApplet={[Function]}
  showFailActionBtns={[Function]}
  showModal={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  updateCurrentPayIndex={[Function]}
  updateErrorMessage={[Function]}
  updateModalTitle={[Function]}
  updatePromptMessage={[Function]}
  updateSuccessMessage={[Function]}
>
  <Modal
    className="pinpad-modal"
    shown={true}
    title="Processing Transaction"
  >
    <div
      className="modal-body"
    >
      <SinglePay
        pay={
          Object {
            "amount": "370.00",
            "ams_account_id": "APD AccountID",
            "apd_input_type": 1,
            "errorMessage": "unknown error",
            "hasError": true,
            "index": 0,
            "payName": "Debit Card",
            "paymentTypeId": 4,
            "payment_type_id": 4,
          }
        }
        pinpad={
          Object {
            "payment": Immutable.Map {
              receiptHeaderId: 1234,
              agentId: 0,
              isRefund: false,
              currentPayIndex: 0,
              promptMessage: "",
              isNewCard: false,
              cardHolderInfo: Immutable.Map {
                  cardholderZip: null,
                  cardholderAddr: null,
              },
              pays: Immutable.List [
                  Immutable.Map {
                      ams_account_id: "APD AccountID",
                      payment_type_id: 4,
                      hasError: true,
                      index: 0,
                      payName: "Debit Card",
                      amount: "370.00",
                      apd_input_type: 1,
                      paymentTypeId: 4,
                      errorMessage: "unknown error",
                  },
              ],
              communicating: false,
              debitCardId: 4,
              companyId: 0,
              customerId: 1,
              apdAppletInfo: Immutable.Map {
                  pinpad_data_entry_timeout: 20,
                  avs_zip: false,
                  avs_full_addr: true,
                  write_to_log: "Yes",
                  merchant_user: "AMS34VbVMSCRealDivId",
                  device_id: 999888,
                  merchant_descriptor: "ActiveNetTrainer",
                  pinpad_pin_entry_timeout: 40,
                  ams_timeout: 100,
                  terminal_location_state: "CA",
                  terminal_number: "007",
                  terminal_location_address: "937 Enterprise Dr",
                  usb_port_name: "COM5",
                  card_acceptor_name: "YMCA OF METROPOLITAN LOS ANGELES",
                  applet_name: "APDInterfaceApplet",
                  terminal_location_city: "Sacramento",
                  merchant_password: "AMS34VbVMSCRealDivId",
                  ams_url: "mstest.active.com",
                  device_type_id: 1,
                  pinpad_swipe_card_timeout: 50,
                  applets: "codebase=/device-libs/",
                  pinpad_device_timeout: 300,
                  ams_port: 443,
                  terminal_location_zip: "95825",
              },
              errorMessage: "",
              apdPaymentInfo: Immutable.Map {
                  receiptNumber: 1000778.005,
                  hasImmediatePaymentDue: false,
                  orderId: "Receipt ID 22916",
                  receiptPaymentId: 20423,
                  rno: 1,
                  committedReceiptId: 22916,
                  canCancelApdPayment: true,
                  isPayerCashCustomer: false,
                  orderDescriptor: "YMCA OF METROPOLITAN LOS ANGELES",
                  key: 1,
              },
          },
            "pinpadFail": Immutable.Map {
              shown: false,
          },
            "pinpadModal": Immutable.Map {
              title: "Processing Transaction",
              shown: true,
              apdInterfaceApplet: Immutable.Map {
              },
          },
          }
        }
      />
      <div
        id="pinpad-applet-container"
      />
    </div>
  </Modal>
</PinpadModal>
`;

exports[`index/Payment/components/Modals/PinPad/components/PinpadModal component should render correctly when hasn\`t shown modal 1`] = `
<PinpadModal
  addError={[Function]}
  clearError={[Function]}
  communicatingWithDevice={[Function]}
  getAPDServerStatus={[Function]}
  pinpad={
    Object {
      "payment": Immutable.Map {
        receiptHeaderId: 1234,
        agentId: 0,
        isRefund: false,
        currentPayIndex: 0,
        promptMessage: "",
        isNewCard: false,
        cardHolderInfo: Immutable.Map {
            cardholderZip: null,
            cardholderAddr: null,
        },
        pays: Immutable.List [
            Immutable.Map {
                ams_account_id: "APD AccountID",
                payment_type_id: 4,
                hasError: true,
                index: 0,
                payName: "Debit Card",
                amount: "370.00",
                apd_input_type: 1,
                paymentTypeId: 4,
                errorMessage: "unknown error",
            },
        ],
        communicating: false,
        debitCardId: 4,
        companyId: 0,
        customerId: 1,
        apdAppletInfo: Immutable.Map {
            pinpad_data_entry_timeout: 20,
            avs_zip: false,
            avs_full_addr: true,
            write_to_log: "Yes",
            merchant_user: "AMS34VbVMSCRealDivId",
            device_id: 999888,
            merchant_descriptor: "ActiveNetTrainer",
            pinpad_pin_entry_timeout: 40,
            ams_timeout: 100,
            terminal_location_state: "CA",
            terminal_number: "007",
            terminal_location_address: "937 Enterprise Dr",
            usb_port_name: "COM5",
            card_acceptor_name: "YMCA OF METROPOLITAN LOS ANGELES",
            applet_name: "APDInterfaceApplet",
            terminal_location_city: "Sacramento",
            merchant_password: "AMS34VbVMSCRealDivId",
            ams_url: "mstest.active.com",
            device_type_id: 1,
            pinpad_swipe_card_timeout: 50,
            applets: "codebase=/device-libs/",
            pinpad_device_timeout: 300,
            ams_port: 443,
            terminal_location_zip: "95825",
        },
        errorMessage: "",
        apdPaymentInfo: Immutable.Map {
            receiptNumber: 1000778.005,
            hasImmediatePaymentDue: false,
            orderId: "Receipt ID 22916",
            receiptPaymentId: 20423,
            rno: 1,
            committedReceiptId: 22916,
            canCancelApdPayment: true,
            isPayerCashCustomer: false,
            orderDescriptor: "YMCA OF METROPOLITAN LOS ANGELES",
            key: 1,
        },
    },
      "pinpadFail": Immutable.Map {
        shown: false,
    },
      "pinpadModal": Immutable.Map {
        title: "Processing Transaction",
        shown: false,
        apdInterfaceApplet: Immutable.Map {
        },
    },
    }
  }
  processAPDResponse={[Function]}
  processRejectAction={[Function]}
  processResolveAction={[Function]}
  setApdInterfaceApplet={[Function]}
  showFailActionBtns={[Function]}
  showModal={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  updateCurrentPayIndex={[Function]}
  updateErrorMessage={[Function]}
  updateModalTitle={[Function]}
  updatePromptMessage={[Function]}
  updateSuccessMessage={[Function]}
>
  <Modal
    className="pinpad-modal"
    shown={false}
    title="Processing Transaction"
  >
    <div
      className="modal-body"
    >
      <div
        id="pinpad-applet-container"
      />
    </div>
  </Modal>
</PinpadModal>
`;
